--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -8,7 +8,7 @@
     <div class="row mb-5">
       <div class="col-12">
         <div class="btn-group btn-group-toggle justify-content-center d-flex flex-wrap" data-toggle="buttons">
-          <label class="btn btn-sm btn-primary active">
+          <!-- <label class="btn btn-sm btn-primary active">
             <input type="radio" name="shuffle-filter" value="all" checked="checked" />All
           </label>
 					{{ $categories := slice }}
@@ -21,7 +21,7 @@
           <label class="btn btn-sm btn-primary">
             <input type="radio" name="shuffle-filter" value="{{ . | urlize }}" />{{ . | humanize }}
           </label>
-          {{ end }}
+          {{ end }} -->
         </div>
       </div>
     </div>
@@ -43,10 +43,10 @@
 </section>
 <!-- /portfolio -->
 
-<section class="section bg-light">
+<!-- <section class="section bg-light">
   <div class="container">
     {{ partial "client-slider.html" . }}
   </div>
-</section>
+</section> -->
 
 {{ end }}
